kubeflow/model-registry/model-registry-ui-vs-patch.yaml
# patch virtual service model-registry-ui to set a header to the request
# the header is kubeflow-userid: kubeflow-user@example.com

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: model-registry-ui
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /model-registry
    match:
      - uri:
          prefix: /model-registry/
    rewrite:
      uri: /
    route:
      - destination:
          host: model-registry-ui-service.frederik-coquelet.svc.cluster.local
          port:
            number: 80
